# zero2prod

./: '  .dockerignore  Cargo.toml  Dockerfile  configuration.yaml  render.yaml
.github/workflows/: rust.yml
.sqlx/: query-06dd4909b0120f49979a991165277b778d2b1ca6271ef47732ba2395b9c948b7.json  query-23989b9fcf329e9a4d34d685f5aedb56399282fcf2cbbe66ecef18b434693c70.json  query-311b4553091b4d849d94c02711acc394e47ea697e2df6010ba1b81e910a0167b.json  query-3aa76dd4c5e51521e4b03080aecf5f1d22505cb0f8d0da176a8832849916dae5.json  query-47f75dd99429be8147af1e9cc17dad35e73389801d282d4d1b396fece37a5980.json  query-6a1a1441edf110df3b227c7ff156d8c89031ff662f04e568a6aae74e20cf397c.json  query-798f78b9eb9049a38b1c0f5a347dd378960532c3504f8e2133038aa4956791da.json  query-b399033752641396cfe752e930e073765335a6c6e84935f60f4918576b47c249.json  query-e68852db2986a1b6ec84641eb547c9540a17cbd514fcd2477485f7989af4cd97.json  query-eb379561efa218a6c4acd868887c626f5e875384088c261ea9ba92530b8d24a7.json
configuration/: base.yaml  development.yaml  production.yaml
migrations/: 20241107135003_create_subscriptions_table.sql  20241129094819_add_seed_user.sql  20241210134328_create_newsletter_issue_table.sql  20241210134946_create_issue_delivery_queue_table.sql
scripts/: init_db.sh  init_redis.sh
src/: configuration.rs  email_client.rs  issue_delivery_worker.rs  main.rs  session_state.rs  startup.rs  telemetry.rs  utils.rs
src/authentication/: middleware.rs  mod.rs  password.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/idempotency/: key.rs  persistence.rs
src/routes/: mod.rs  newsletters.rs  subscriptions.rs  subscriptions_confirm.rs
src/routes/admin/: change_password.html  dashboard.html  mod.rs  newsletters.html  newsletters.rs
src/routes/home/: home.html
src/routes/login/: login.html  mod.rs
tests/: health_check.rs
tests/api/: change_password.rs  health_check.rs  helpers.rs  login.rs  main.rs  newsletter.rs  subscriptions.rs  subscriptions_confirm.rs
