[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
actix-session = { version = "0.10.1", features = ["redis-session-rustls"] }
actix-web = "4"
actix-web-flash-messages = { version = "0.5.0", features = ["cookies"] }
anyhow = "1.0.93"
argon2 = { version = "0.5.3", features = ["std"] }
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
config = "0.14.1"
rand = { version = "0.8.5", features = ["std_rng"] }
reqwest = { version = "0.12.9", default-features = false, features = ["cookies", "json", "rustls-tls"] }
serde = { version = "1.0.214", features = ["derive"] }
sqlx = { version = "0.8.2", default-features = false, features = ["runtime-tokio-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
thiserror = "2.0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1.40", features = ["log"] }
tracing-actix-web = "0.7.14"
tracing-log = "0.2.0"
tracing-subscriber = { version = "0.3.18", features = ["registry", "env-filter", "json"] }
unicode-segmentation = "1.12.0"
uuid = { version = "1.11.0", features = ["serde", "v4"] }
validator = "0.19.0"

[dev-dependencies]
claims = "0.7.1"
fake = "3.0.1"
linkify = "0.10.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
serde_json = "1.0.133"
wiremock = "0.6.2"
